[package]
name = "scirs2-datasets"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Datasets module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["datasets", "machine-learning", "data", "scientific", "scipy"]
categories = ["science", "data-structures", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { workspace = true }
scirs2-core = { workspace = true, features = ["cache"] }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }

# Data handling
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }

# Datasets specific dependencies
reqwest = { workspace = true, optional = true }
dirs = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
blake3 = { workspace = true }
lazy_static = { workspace = true }
ureq = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
download = ["reqwest"]