[package]
name = "scirs2-fft"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Fast Fourier Transform module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["fft", "fourier", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[features]
default = ["helper", "window", "parallel"]
helper = []
window = []
minimal = []
parallel = ["rayon"]
cuda = ["rayon"] # Optional CUDA support for GPU acceleration
never = [] # Used to conditionally disable tests during development

[dependencies]
# Core dependencies
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
scirs2-core = { workspace = true, features = ["simd", "parallel"] }
rayon = { workspace = true, optional = true }

# FFT specific dependencies
rustfft = { workspace = true }
rand = { workspace = true }

# Serialization dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# System info and benchmarking
num_cpus = { workspace = true }
tempfile = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
plotly = { workspace = true }

[[bench]]
name = "fft_benchmarks"
harness = false

[[bench]]
name = "scipy_comparison"
harness = false
