[package]
name = "scirs2-fft"
version = "0.1.0-alpha.5"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Fast Fourier Transform module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["fft", "fourier", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[features]
default = ["helper", "window", "parallel"]
helper = []
window = []
minimal = []
parallel = []
cuda = [] # Optional CUDA support for GPU acceleration (dependencies disabled)
hip = [] # Optional ROCm/HIP support for AMD GPU acceleration
sycl = [] # Optional SYCL support for cross-platform GPU acceleration
never = [] # Used to conditionally disable tests during development

[dependencies]
# Core dependencies
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
scirs2-core = { workspace = true, features = ["simd", "parallel", "gpu"] }

# FFT specific dependencies
rustfft = { workspace = true }
rand = { workspace = true }

# Serialization dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# System info and benchmarking
num_cpus = { workspace = true }
tempfile = { workspace = true }
rand_distr = { workspace = true }

# CUDA dependencies (optional) - temporarily disabled
# cudarc = { version = "0.12", optional = true, features = ["driver", "runtime", "cublas", "curand"] }
# cufft = { version = "0.3", optional = true } # Temporarily disabled - version not available

# ROCm/HIP dependencies (optional) - temporarily disabled  
# hiprt = { version = "0.2", optional = true }
# rocblas = { version = "0.2", optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
plotly = { workspace = true }

[[bench]]
name = "fft_benchmarks"
harness = false

[[bench]]
name = "scipy_comparison"
harness = false
